; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/ole32/extr_hglobalstream.c_stream_info.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/ole32/extr_hglobalstream.c_stream_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_11__ = type { i64, i64, %struct.TYPE_9__, i32 }
%struct.TYPE_9__ = type { i64, i32 }
%struct.TYPE_12__ = type { i64 }
%struct.TYPE_10__ = type { i64, i32 }

@S_OK = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [16 x i8] c"unexpected %#x\0A\00", align 1
@STATFLAG_DEFAULT = common dso_local global i32 0, align 4
@STGTY_STREAM = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [15 x i8] c"unexpected %p\0A\00", align 1
@GUID_NULL = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [15 x i8] c"unexpected %s\0A\00", align 1
@STREAM_SEEK_CUR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i64*, i32*, i32*)* @stream_info to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @stream_info(i32* %0, i64* %1, i32* %2, i32* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i64*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i64, align 8
  %10 = alloca %struct.TYPE_11__, align 8
  %11 = alloca %struct.TYPE_12__, align 8
  %12 = alloca %struct.TYPE_10__, align 8
  store i32* %0, i32** %5, align 8
  store i64* %1, i64** %6, align 8
  store i32* %2, i32** %7, align 8
  store i32* %3, i32** %8, align 8
  %13 = load i64*, i64** %6, align 8
  store i64 0, i64* %13, align 8
  %14 = load i32*, i32** %8, align 8
  store i32 -1, i32* %14, align 4
  %15 = load i32*, i32** %7, align 8
  store i32 -1, i32* %15, align 4
  %16 = load i32*, i32** %5, align 8
  %17 = load i64*, i64** %6, align 8
  %18 = call i64 @GetHGlobalFromStream(i32* %16, i64* %17)
  store i64 %18, i64* %9, align 8
  %19 = load i64, i64* %9, align 8
  %20 = load i64, i64* @S_OK, align 8
  %21 = icmp eq i64 %19, %20
  %22 = zext i1 %21 to i32
  %23 = load i64, i64* %9, align 8
  %24 = call i32 @ok(i32 %22, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i64 %23)
  %25 = call i32 @memset(%struct.TYPE_11__* %10, i32 85, i32 40)
  %26 = load i32*, i32** %5, align 8
  %27 = load i32, i32* @STATFLAG_DEFAULT, align 4
  %28 = call i64 @IStream_Stat(i32* %26, %struct.TYPE_11__* %10, i32 %27)
  store i64 %28, i64* %9, align 8
  %29 = load i64, i64* %9, align 8
  %30 = load i64, i64* @S_OK, align 8
  %31 = icmp eq i64 %29, %30
  %32 = zext i1 %31 to i32
  %33 = load i64, i64* %9, align 8
  %34 = call i32 @ok(i32 %32, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i64 %33)
  %35 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %10, i32 0, i32 0
  %36 = load i64, i64* %35, align 8
  %37 = load i64, i64* @STGTY_STREAM, align 8
  %38 = icmp eq i64 %36, %37
  %39 = zext i1 %38 to i32
  %40 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %10, i32 0, i32 0
  %41 = load i64, i64* %40, align 8
  %42 = call i32 @ok(i32 %39, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i64 %41)
  %43 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %10, i32 0, i32 1
  %44 = load i64, i64* %43, align 8
  %45 = icmp ne i64 %44, 0
  %46 = xor i1 %45, true
  %47 = zext i1 %46 to i32
  %48 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %10, i32 0, i32 1
  %49 = load i64, i64* %48, align 8
  %50 = call i32 @ok(i32 %47, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0), i64 %49)
  %51 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %10, i32 0, i32 3
  %52 = call i32 @IsEqualIID(i32* %51, i32* @GUID_NULL)
  %53 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %10, i32 0, i32 3
  %54 = call i64 @wine_dbgstr_guid(i32* %53)
  %55 = call i32 @ok(i32 %52, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.2, i64 0, i64 0), i64 %54)
  %56 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %10, i32 0, i32 2
  %57 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %56, i32 0, i32 0
  %58 = load i64, i64* %57, align 8
  %59 = icmp ne i64 %58, 0
  %60 = xor i1 %59, true
  %61 = zext i1 %60 to i32
  %62 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %10, i32 0, i32 2
  %63 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %62, i32 0, i32 0
  %64 = load i64, i64* %63, align 8
  %65 = call i32 @ok(i32 %61, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i64 %64)
  %66 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %10, i32 0, i32 2
  %67 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %66, i32 0, i32 1
  %68 = load i32, i32* %67, align 8
  %69 = load i32*, i32** %7, align 8
  store i32 %68, i32* %69, align 4
  %70 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %11, i32 0, i32 0
  store i64 0, i64* %70, align 8
  %71 = load i32*, i32** %5, align 8
  %72 = load i32, i32* @STREAM_SEEK_CUR, align 4
  %73 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %11, i32 0, i32 0
  %74 = load i64, i64* %73, align 8
  %75 = call i64 @IStream_Seek(i32* %71, i64 %74, i32 %72, %struct.TYPE_10__* %12)
  store i64 %75, i64* %9, align 8
  %76 = load i64, i64* %9, align 8
  %77 = load i64, i64* @S_OK, align 8
  %78 = icmp eq i64 %76, %77
  %79 = zext i1 %78 to i32
  %80 = load i64, i64* %9, align 8
  %81 = call i32 @ok(i32 %79, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i64 %80)
  %82 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %12, i32 0, i32 0
  %83 = load i64, i64* %82, align 8
  %84 = icmp ne i64 %83, 0
  %85 = xor i1 %84, true
  %86 = zext i1 %85 to i32
  %87 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %12, i32 0, i32 0
  %88 = load i64, i64* %87, align 8
  %89 = call i32 @ok(i32 %86, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i64 %88)
  %90 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %12, i32 0, i32 1
  %91 = load i32, i32* %90, align 8
  %92 = load i32*, i32** %8, align 8
  store i32 %91, i32* %92, align 4
  ret void
}

declare dso_local i64 @GetHGlobalFromStream(i32*, i64*) #1

declare dso_local i32 @ok(i32, i8*, i64) #1

declare dso_local i32 @memset(%struct.TYPE_11__*, i32, i32) #1

declare dso_local i64 @IStream_Stat(i32*, %struct.TYPE_11__*, i32) #1

declare dso_local i32 @IsEqualIID(i32*, i32*) #1

declare dso_local i64 @wine_dbgstr_guid(i32*) #1

declare dso_local i64 @IStream_Seek(i32*, i64, i32, %struct.TYPE_10__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
